# bd_skills

./: .gitignore  .mcp.json  README.md  pyproject.toml
skills/blackduck/: SKILL.md
skills/list_projects/: SKILL.md
skills/policy_violations/: SKILL.md
skills/project_risk/: SKILL.md
skills/project_vulns/: SKILL.md
src/bd_skill/: cache.py  client.py  detect.py  models.py  profiles.py  resolver.py  server.py  throttle.py
src/bd_skill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/blackduck_assist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
