[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackduck-assist"
version = "0.1.0"
description = "Black Duck SCA MCP server for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "blackduck>=1.1.0",
    "thefuzz[speedup]>=0.22",
    "cachetools>=5.3",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
blackduck-assist = "bd_skill.server:main"

[tool.setuptools.packages.find]
where = ["src"]
